182: implement openapi serverside
